manifests/apps/slimserve/slimserve-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: slimserve
  name: slimserve
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: slimserve
