manifests/apps/slimserve/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slimserve
  namespace: slimserve
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`files.savew.dev`)
      priority: 10
      services:
        - kind: Service
          name: slimserve
          namespace: slimserve
          passHostHeader: true
          port: 8080
          scheme: http
  tls:
    domains:
      - main: files.savew.dev
    secretName: wildcard-savew.dev-tls
